--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -24,7 +24,7 @@
     "price_feeds": "Price Feeds",
     "global_debt_ceiling": "GLOBAL DEBT CEILING",
     "current_debt": "CURRENT DEBT",
-    "burn_rate": "BASE RATE",
+    "base_rate": "BASE RATE",
     "number_of_liquidations": "NUMBER OF LIQUIDATIONS",
     "buy_and_burn_lot_size": "BUY & BURN LOT SIZE",
     "inflate_and_sell_lot_size": "INFLATE & SELL LOT SIZE"
