move grid layout into page staging function
* remove vestigial functions
* enforce maker access via hooks
* check for metemask network w/o using maker
* async maker creation

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -31,6 +31,8 @@
   },
   "cdp_type": "CDP Type",
   "not_found": "Not Found",
+  "network": "Network",
+  "unknown": "Unknown",
   "cdp": "CDP",
   "connect": "Connect"
 }
