UI changes and calculate values

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -74,9 +74,9 @@
   "cdp": "CDP",
   "connect": "Connect",
   "stability_fee": "Stability fee",
-  "liquidation_penalty": "Liquidation penalty",
-  "liquidation_ratio": "Liquidation ratio",
-  "liquidation_price": "Liquidation Price",
+  "liquidation_penalty": "Liquidation fee",
+  "liquidation_ratio": "Minimum liquidation ratio",
+  "liquidation_price": "Liquidation price",
   "liquidation_penalty_shortened": "Liq Fee",
   "liquidation_ratio_shortened": "Liq ratio",
   "liquidation_price_shortened": "Liq Price",
