--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -52,6 +52,7 @@
     "proxy_title": "Creating a proxy",
     "proxy_text": "Before creating your first CDP, you must create a personal proxy contract.",
     "insufficient_ilk_balance": "Insufficient {0} balance",
+    "draw_too_much_dai": "CDP below liquidation threshold",
     "stability_fee_description": "The fee that is added to the total outstanding DAI debt when a liquidation occurs.",
     "liquidation_ratio_description": "The collateral-to-dai ratio at which a CDP becomes vulnerable to liquidation.",
     "liquidation_penalty_description": "The fee that is added to the total outstanding DAI debt when a liquidation occurs."
