--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -67,6 +67,23 @@
     "liquidation_ratio_description": "The collateral-to-dai ratio at which a CDP becomes vulnerable to liquidation.",
     "liquidation_penalty_description": "The fee that is added to the total outstanding DAI debt when a liquidation occurs."
   },
+  "cdp_migrate": {
+    "select_title": "Select CDP to Migrate",
+    "select_text": "Select a CDP and pay back the stability fee in DAI or MKR to migrate it to Multi-collateral Dai and the new CDP Portal.",
+    "current_ratio": "Current Ratio",
+    "dai_debt": "Dai debt",
+    "migrate": "Migrate",
+    "payment": "Payment",
+    "trust_site_with_dai": "Trust this site with my DAI",
+    "pay_and_migrate": "Pay and Migrate",
+    "migrate_in_progress_header": "Your CDP is being migrated",
+    "migrate_in_progress_text": "The estimated time is 8 minutes. You can safely leave this page and return.",
+    "migrate_complete_header": "CDP Migration complete",
+    "migrate_complete_text": "CDP #{0} has been successfully migrated to Multi-collateral Dai and the new CDP Portal.",
+    "view_transaction_details": "View transaction details",
+    "migrate_another_cdp": "Migrate another CDP",
+    "exit_to_cdp_portal": "Exit to CDP Portal"
+  },
   "actions": {
     "back": "Back",
     "continue": "Continue",
@@ -114,6 +131,7 @@
   "network": "Network",
   "unknown": "Unknown",
   "cdp": "CDP",
+  "cdp_id": "CDP ID",
   "connect": "Connect",
   "cancel": "Cancel",
   "stability_fee": "Stability fee",
