CDP-283 Show other wallets on landing page

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -22,6 +22,10 @@
     "title": "Spend crypto without leaving your position.",
     "subtitle": "Leverage your crypto assets to generate Dai, a decentralized cryptocurrency pegged at the value of 1 US dollar.",
     "metamask": "MetaMask",
+    "trust": "Trust",
+    "coinbase": "Coinbase Wallet",
+    "imtoken": "ImToken",
+    "alphawallet": "Alpha Wallet",
     "ledger_nano": "Ledger Nano",
     "trezor": "Trezor",
     "read_only": "Read-Only",
