CDP-291 - Skip setup proxy step when proxy and allowance has already been set

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -48,6 +48,12 @@
     "select_title": "Select a collateral type",
     "select_text": "Each collateral type has its own risk parameters. You can lock up additional collateral types later.",
 
+    "setup_proxy_title": "Deploy Proxy and Set Allowance",
+    "setup_proxy_proxy_text": "Proxies are used in the CDP Portal to bundle multiple transactions into one, saving transaction time and gas costs. This only has to be done once.",
+    "setup_proxy_allowance_text": "This permission allows Maker smart contracts to interact with your {0}. This has to be done once for each new collateral type.",
+    "setup_proxy_proxy_button": "Setup",
+    "setup_proxy_allowance_button": "Set",
+
     "deposit_title": "Deposit {0} and Generate Dai",
     "deposit_text": "Different collateral types have different risk parameters and collateralization ratios.",
     "deposit_sidebar_title": "{0} Risk Parameters",
