make capitalization consistent

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -17,7 +17,7 @@
     "outstanding_debt": "Outstanding debt",
     "wallet_balance": "wallet balance",
     "tx_history": "Transaction history",
-    "outstanding_dai_debt": "Outstanding DAI Debt"
+    "outstanding_dai_debt": "Outstanding Dai debt"
   },
   "landing_page": {
     "title": "Spend crypto without leaving your position.",
