implemented set allowance option

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -117,6 +117,9 @@
     "cannot_payback_more_than_owed": "Cannot pay back more than owed",
     "dai_balance": "Your Dai balance",
     "dai_debt": "Dai debt",
+    "unlock_dai": "Unlock Dai to continue",
+    "unlocking_dai": "Unlocking dai ...",
+    "dai_unlocked": "Dai unlocked",
     "maximum_available_to_generate": "Maximum available to generate",
     "maximum_available_to_withdraw": "Maximum available to withdraw",
     "current_account_balance": "Current account balance",
