payback -> pay back

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -107,11 +107,11 @@
     "withdraw_description": "How much {0} would you like to withdraw?",
     "generate_title": "Generate DAI",
     "generate_description": "How much DAI would you like to generate?",
-    "payback_title": "Payback DAI",
-    "payback_description": "How much DAI would you like to payback?",
+    "payback_title": "Pay Back DAI",
+    "payback_description": "How much DAI would you like to pay back?",
     "cdp_below_threshold": "CDP below liquidation threshold",
     "insufficient_balance": "Insufficient {0} balance",
-    "cannot_payback_more_than_owed": "Cannot payback more than owed",
+    "cannot_payback_more_than_owed": "Cannot pay back more than owed",
     "dai_balance": "Your Dai balance",
     "dai_debt": "Dai debt",
     "maximum_available_to_generate": "Maximum available to generate",
