CDP-275 Extract connect hardware wallet logic and first-pass of dropdown in dashboard

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -162,6 +162,7 @@
     "imtoken": "ImToken",
     "alphawallet": "Alpha Wallet",
     "ledger_nano": "Ledger Nano",
-    "trezor": "Trezor"
+    "trezor": "Trezor",
+    "other": "Active Wallet"
   }
 }
