--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -32,10 +32,12 @@
     "token": "TOKEN",
     "id": "CDP ID",
     "ratio": "CURRENT RATIO",
+    "ratio_mobile": "Ratio",
     "deposited": "DEPOSITED",
     "withdraw": "AVAIL. TO WITHDRAW",
     "debt": "DAI DEBT",
     "view_cdp": "View CDP",
+    "view_cdp_mobile": "View",
     "total_collateral_locked": "total collateral locked",
     "total_dai_debt": "total dai debt"
   },
