--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -42,6 +42,7 @@
     "total_dai_debt": "total dai debt"
   },
   "sidebar": {
+    "wallet_balances": "Wallet Balances",
     "read_only_mode": "Read-Only Mode",
     "price_feeds": "Price Feeds",
     "global_debt_ceiling": "GLOBAL DEBT CEILING",
@@ -52,7 +53,11 @@
     "inflate_and_sell_lot_size": "INFLATE & SELL LOT SIZE",
     "view_price_feeds": "View price feeds",
     "view_more": "View more",
-    "view_less": "View less"
+    "view_less": "View less",
+    "asset": "ASSET",
+    "balance": "BALANCE",
+    "usd": "USD",
+    "send": "SEND"
   },
   "cdp_create": {
     "select_title": "Select a collateral type",
