CDP-368 Show SAI in wallet balances

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -58,6 +58,7 @@
     "balance": "BALANCE",
     "usd": "USD",
     "send": "SEND",
+    "migrate": "MIG",
     "no_wallet": "Not connected"
   },
   "cdp_create": {
