--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -160,6 +160,12 @@
     "creating_proxy": "Creating Proxy...",
     "proxy_created": "Proxy Created"
   },
+  "save": {
+    "dai_savings_rate": "Dai Savings rate",
+    "description": "Receive interest on your Dai. Withdraw or top-up at any time.",
+    "deposit_amount": "Deposit amount",
+    "withdraw_amount": "Withdraw amount"
+  },
   "verbs": {
     "depositing": "Depositing",
     "generating": "Generating"
