start replacing sidebar ui

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -51,12 +51,7 @@
     "wallet_balances": "Wallet Balances",
     "read_only_mode": "Read-Only Mode",
     "price_feeds": "Price Feeds",
-    "global_debt_ceiling": "GLOBAL DEBT CEILING",
-    "current_debt": "CURRENT DEBT",
-    "base_rate": "BASE RATE",
-    "number_of_liquidations": "NUMBER OF LIQUIDATIONS",
-    "buy_and_burn_lot_size": "BUY & BURN LOT SIZE",
-    "inflate_and_sell_lot_size": "INFLATE & SELL LOT SIZE",
+    "system_collateralization": "COLLATERALIZATION",
     "view_price_feeds": "View price feeds",
     "view_more": "View more",
     "view_less": "View less",
