--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -57,6 +57,7 @@
     "number_of_liquidations": "NUMBER OF LIQUIDATIONS",
     "buy_and_burn_lot_size": "BUY & BURN LOT SIZE",
     "inflate_and_sell_lot_size": "INFLATE & SELL LOT SIZE",
+    "system_collateralization": "SYSTEM COLLATERALIZATION",
     "view_price_feeds": "View price feeds",
     "view_more": "View more",
     "view_less": "View less",
