--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -184,7 +184,9 @@
     "dai_savings_rate": "Dai Savings rate",
     "description": "Receive interest on your Dai. Withdraw or top-up at any time.",
     "deposit_amount": "Deposit amount",
-    "withdraw_amount": "Withdraw amount"
+    "withdraw_amount": "Withdraw amount",
+    "deposit_dai": "Deposit DAI",
+    "deposit_dai_subheading": "Start earning as soon as your deposit is confirmed."
   },
   "verbs": {
     "depositing": "Depositing",
