SAVE-28 display get started button for onboarding if no proxy

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -197,7 +197,9 @@
     "deposit_amount": "Deposit amount",
     "withdraw_amount": "Withdraw amount",
     "deposit_dai": "Deposit DAI",
-    "deposit_dai_subheading": "Start earning as soon as your deposit is confirmed."
+    "deposit_dai_subheading": "Start earning as soon as your deposit is confirmed.",
+    "get_started": "Get Started",
+    "get_started_title": "Open a Maker Vault to start earning DAI."
   },
   "verbs": {
     "depositing": "Depositing",
