--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -134,6 +134,7 @@
   "dsr_deposit": {
     "open_vault": "Open your Maker Earn Vault",
     "deposit_form_title": "Enter the amount you would like to deposit.",
+    "setup_proxy_text": "A proxy is used to bundle multiple transactions into one, saving transaction time and gas costs. This only has to be done once.",
     "confirm_title": "Confirm Deposit"
   },
   "actions": {
@@ -197,7 +198,9 @@
     "deposit_amount": "Deposit amount",
     "withdraw_amount": "Withdraw amount",
     "deposit_dai": "Deposit DAI",
-    "deposit_dai_subheading": "Start earning as soon as your deposit is confirmed."
+    "deposit_dai_subheading": "Start earning as soon as your deposit is confirmed.",
+    "get_started": "Get Started",
+    "get_started_title": "Open a Maker Vault to start earning DAI."
   },
   "verbs": {
     "depositing": "Depositing",
