--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -51,6 +51,9 @@
     "wallet_balances": "Wallet Balances",
     "read_only_mode": "Read-Only Mode",
     "price_feeds": "Price Feeds",
+    "system_info": "System Info",
+    "active_cdps": "ACTIVE CDPS",
+    "active_cdps_figure": "{0} CDPs",
     "global_debt_ceiling": "GLOBAL DEBT CEILING",
     "current_debt": "CURRENT DEBT",
     "base_rate": "BASE RATE",
@@ -58,6 +61,7 @@
     "buy_and_burn_lot_size": "BUY & BURN LOT SIZE",
     "inflate_and_sell_lot_size": "INFLATE & SELL LOT SIZE",
     "view_price_feeds": "View price feeds",
+    "view_mkr_tools": "View mkr.tools",
     "view_more": "View more",
     "view_less": "View less",
     "asset": "ASSET",
