--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -60,6 +60,7 @@
     "number_of_liquidations": "NUMBER OF LIQUIDATIONS",
     "buy_and_burn_lot_size": "BUY & BURN LOT SIZE",
     "inflate_and_sell_lot_size": "INFLATE & SELL LOT SIZE",
+    "system_collateralization": "COLLATERALIZATION",
     "view_price_feeds": "View price feeds",
     "view_mkr_tools": "View mkr.tools",
     "view_more": "View more",
