CDP-443 change position to vault

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -41,7 +41,7 @@
     "view_cdp_mobile": "View",
     "total_collateral_locked": "total collateral locked",
     "total_dai_debt": "total dai debt",
-    "get_started_title": "Open your first position within the Maker Vault."
+    "get_started_title": "Open your first vault to start generating Dai."
   },
   "navbar": {
     "save": "Earn",
