Prepare landing page for localization.

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -21,8 +21,58 @@
     "not_applicable": "N/A"
   },
   "landing_page": {
-    "title": "Spend crypto without leaving your position.",
-    "subtitle": "Leverage your crypto assets to generate Dai, a decentralized cryptocurrency pegged at the value of 1 US dollar.",
+    "headline": "Trade, borrow and save using Dai.",
+    "trade_card": {
+      "title": "Trade",
+      "description": "Place orders in the Marketplace, or simply exchange your tokens instantly for what's available.",
+      "button": "Start Trading"
+    },
+    "borrow_card": {
+      "title": "Borrow",
+      "description": "Lock your tokens as collateral to generate Dai, a decentralized cryptocurrency pegged to 1 USD.",
+      "button": "Borrow Dai"
+    },
+    "save_card": {
+      "title": "Save",
+      "description": "Earn savings on your Dai by locking it into Oasis Save. Automatic and non-custodial.",
+      "button": "Save Dai"
+    },
+    "token_section_title": "Currently supported by Oasis Trade",
+    "section1_title": "What's the Story",
+    "section1_p": "Oasis is a platform for decentralized finance. Use it to trade tokens, borrow Dai and earn savings — all in one place.",
+    "section2_title": "Secure protocol built on Ethereum",
+    "section2_p": "Oasis is built on top of audited and formally verified smart contracts created by Maker, the industry leader in secure decentralized finance.",
+    "section3_title": "Completely Permissionless",
+    "section3_p": "Anyone can access the system simply by using an ethereum supported wallet. Oasis is a decentralized, non-custodial platform. We can never touch or control your assets.",
+    "questions_title": "Questions",
+    "question1": "What is Oasis?",
+    "answer1": "Oasis is a decentralized application which runs on the Ethereum blockchain. Allowing anyone to trade tokens, borrow against them and earn savings using Dai.",
+    "question2": "What is Dai?",
+    "answer2": "Dai is a stablecoin soft pegged to the US Dollar. It aims to be 1 Dai = $1 USD, but this can vary slightly. Read more {0}.",
+    "answer2_link1_url": "https://makerdao.com/dai/",
+    "answer2_link1_text": "here",
+    "question3": "Do I need an account?",
+    "answer3": "You do not need an account to use Oasis. However, you will need an Ethereum wallet. Oasis supports most Ethereum browser wallets such as {0}, {1}, etc.",
+    "answer3_link1_url": "https://metamask.io/",
+    "answer3_link1_text": "Metamask",
+    "answer3_link2_url": "https://wallet.coinbase.com/",
+    "answer3_link2_text": "Coinbase Wallet",
+    "question4": "Why are Borrow and Save not yet available?",
+    "answer4": "Borrow and Save are features coming with the launch of Multi-Collateral Dai. You can track {0}.",
+    "answer4_link1_url": "https://makerdao.com/roadmap/",
+    "answer4_link1_text": "Multi-Collateral Dai progress here",
+    "question5": "Is it secure?",
+    "answer5": "We conduct a range of audits on all of our smart contracts and the Oasis code is open-source.",
+    "question6": "Are there fees?",
+    "answer6": "Oasis does not charge any fees, although you will have to pay {0} and other fees associated with the Maker Protocol, such as Stability Fees.",
+    "answer6_link1_url": "https://kb.myetherwallet.com/en/transactions/what-is-gas/",
+    "answer6_link1_text": "gas",
+    "question7": "I have a question, how can I get in contact with you?",
+    "answer7": "You can reach the team by contacting us on {0}.",
+    "answer7_link1_url": "https://chat.makerdao.com",
+    "answer7_link1_text": "our chat",
+    "question8": "What is Oasis?",
+    "answer8": "Oasis is a decentralized application which runs on the Ethereum blockchain. Allowing anyone to trade tokens, borrow against them and earn savings using Dai.",
     "read_only": "Read-Only",
     "wallet_connect": "Wallet Connect",
     "wallet_link": "Coinbase Wallet"
